# math

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  README.rst  a  cov.sh  flocon_de_Koch.py  olympiades_exo3.py  requirements.txt  setup.cfg
calculs/: alea.py
divers/: etoile5.py  farey.py  farey_inverse.py  fibonacci.py  formulaire.py  fraction.py  grid.py  hello.py  kwik-calc.py  kwik.py  lineaire.py  nombre_d_or.py  pendu.py  polygone.py  polygone2.py  raise_app.py  rondoudou.py
entrainement_olympiades_2017/: exercice_4.py
entrainement_olympiades_exo3/: calcule.py  valeurs_possibles.py
fractales/: .gitignore  flocon_de_Koch.py  fractales.py  fractales.xml  raise_app.py  test_flocon.py  test_fractales.py
geometrie/: pentagone.py  pentagone1.py  pentagone2.py  polygone.py  polygone2.py  raise_app.py  test_geo.py
intersection_cercle/: intersection_cercle.py
inversion/: README.md  inversion.py
olympiades/: entrainement_2017_exercice_4.py  exo3_calcule.py  exo3_valeurs_possibles.py  exo4_entrainement_2017.py  test_exo4.py
olympiades/entrainement_exo3/: calcule.py  test_exo3.py  valeurs_possibles.py
poursuite/: catchme.py  dog.py  mice.py  mice2.py
premiers/: decompose.py  eratosthene.py  liste_premiers.py  premier.py  prof_crible.py  raise_app.py  spirale.py  spirale2.py  spirale_ulam.py  spirale_ulam_points.py  sundaram.py  test_primes.py
projecteuler/: CMakeLists.txt  README.md  conftest.py  eulerlib.py  exact_sqrt.py  initp.sh  p001.py  p003.py  p004.py  p005.py  p007.py  p009.py  p010.py  p011.py  p012.py  p013.py  p014.py  p015.py  p016.py  p017.py  p018.py  p019.py  p020.py  p022.py  p023.py  p024.py  p025.py  p026.py  p027.py  p029.py  p030.py  p031.py  p032.py  p033.py  p034.py  p035.py  p036.py  p037.py  p038.py  p039.py  (+101 more)
tests/: test_eratosthene.py  test_exo3.py  test_exo4.py  test_flocon.py  test_geo.py  test_primes.py  test_raise_app.py
