#

set(CMAKE_CXX_FLAGS "-std=c++11 -O3 -Wall -Wextra -Wconversion -Werror")
set(CMAKE_C_FLAGS "-std=c99 -O3 -Wall -Wextra -Wconversion -Werror")

add_executable(p040 p040.c)
add_executable(p041 p041.cpp)
add_executable(p043 p043.cpp)
add_executable(p044 p044.cpp)
add_executable(p045 p045.cpp)
add_executable(p051 p051.c)
add_executable(p062 p062.cpp)
add_executable(p070 p070.c)
add_executable(p092 p092.c)
add_executable(p095 p095.cpp)
add_executable(p097 p097.c)
add_executable(p206 p206.c)
